--- a/settings.json
+++ b/settings.json
@@ -6,8 +6,8 @@
   },
 
   "server": {
-    "ip": "WetherXSMP.aternos.me
-", 
+    "ip": "WetherXSMP.aternos.me",
+ 
     "port": 27055,   
     "version": "1.12.1"   
   },
