--- a/settings.json
+++ b/settings.json
@@ -31,8 +31,8 @@
     },
 
     "chat-messages": {
-      "enabled": true,
-      "repeat": true,
+      "enabled": false,
+      "repeat": false,
       "repeat-delay": 60,
 
       "messages": [
