--- a/settings.json
+++ b/settings.json
@@ -35,8 +35,7 @@
       "repeat-delay": 5,
       "messages": [
         "/register asdfghj asdfghj",
-        "/login asdfghj",
-        "I Like to Play Minecraft!"
+        "/login asdfghj"
       ]
     },
 
